# Ailurus

./: .gitignore  12  AUTHORS  ChangeLog  INSTALL  MANIFEST.in  Makefile.am  README  UNINSTALL  ailurus-apt-recovery.desktop  ailurus-apt-recovery.desktop.in  ailurus-clean-up.desktop  ailurus-clean-up.desktop.in  ailurus-fastest-repository.desktop  ailurus-fastest-repository.desktop.in  ailurus-information.desktop  ailurus-information.desktop.in  ailurus-install-software.desktop  ailurus-install-software.desktop.in  ailurus-recovery.desktop  ailurus-recovery.desktop.in  ailurus-rpm-recovery.desktop  ailurus-rpm-recovery.desktop.in  ailurus-system-setting.desktop  ailurus-system-setting.desktop.in  ailurus.1  ailurus.desktop  ailurus.desktop.in  ailurus.directory  ailurus.menu  ailurus.spec  ailurus.spec.old  ailurus.te  ailurus_quick_start.directory  ailurus_quick_start.directory.in  configure.ac  fix_file_permissions  install_log  setup.cfg  setup.py  (+2 more)
ailurus/: __init__.py  clean_up_pane.py  computer_doctor_pane.py  daemon.py  download_icons.py  gae.py  info_pane.py  install_remove_pane.py  lib.py  libapp.py  libsetting.py  libu.py  loader.py  main.py  native_apps  native_apps.py  offline_install_pane.py  prefs.py  show_a_linux_skill_bubble.py  snapshot_pane.py  strings.py  system_setting_pane.py  term.py  test.py  tip_after_logging_in.py  u_app.py  u_info.py  u_offline_install.py  u_setting.py  ui.py  urls.py  version  z_locale.py  z_locale.py.in  z_tipoftheday.py
ailurus/common/: __init__.py  apps.py  apps_eclipse.py  cure.py  hardwareinfo.py  menu.py  osinfo.py  (+3 more)
bamboo/: fedora.py  ubuntu.py
comicview/: chrome.manifest  install.rdf
data/: Makefile.am
data/files/: Makefile.am  enable_sudo.py  mplayer_comic  mplayer_url_convert.py  mplayerconfig  texpdf  useicc  war3.reg  wine_wqy_font.reg
dbus/: Makefile.am  ailurus.dbus.py  cn.ailurus.conf  cn.ailurus.service  cn.ailurus.service.in
debian/: changelog  control  control.in  copyright  menu  watch
developer/: MTJ.py  check_xpi_name.py  fedora_server_list.py  find_out_desktop_environment.py  fix_file_permissions  gen_icons_pack.py  remove_unfree_from_potfiles.py  tasksel.py  ubuntu_server_list.py  who_need_icons.py
man/: ailurus.1
po/: LINGUAS  Makevars  POTFILES.in  ailurus.pot  ar.po  be.po  bg.po  bn.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  fa.po  fi.po  fo.po  fr.po  ga.po  gl.po  he.po  hi.po  hu.po  id.po  is.po  it.po  ja.po  jv.po  ka.po  kk.po  ko.po  lt.po  mk.po  ml.po  ms.po  (+25 more)
policykit0/: Makefile.am
shortcut/: Makefile.am  ailurus  ailurus.desktop.in
src/: Makefile.am  lib.py  loader.py  settinglib.py  u_app.py  u_info.py  u_setting.py  ui.py  ulib.py  z_locale.py  z_locale.py.in  z_output_safely_deletable_pkgs_2.py  z_searchbox.py  z_splashwindow.py  z_tipoftheday.py
src/common/: Makefile.am  apps.py  apps_eclipse.py  hardwareinfo.py  menu.py  osinfo.py
src/fedora/: Makefile.am  apps.py  disabled_apps.py  disabled_third_party_repos.py  osinfo.py
src/gnome/: Makefile.am  apps.py  osinfo.py  setting.py
src/ubuntu/: Makefile.am  app0.py  app1.py  app2.py  app3.py  app_not_opensource.py  menu.py  osinfo.py  quick_setup.py  serverlib.py  setting.py  third_party_repos.py  u_apt_recovery.py  u_fastest_mirror.py
support/: disable_sudo  disable_sudo.py  enable_sudo  fedora-native-64bit-flash-installer.sh  firefox_user_setting  show-a-linux-skill-bubble  ubuntu-native-64bit-flash-installer.sh  user.js
tool/: add_unfree_to_potfiles.py  fix_file_permissions  merge_po_on_desktop.py
unfree/: fedora.py  for_fedora.py  for_test.py  for_ubuntu.py  ubuntu.py
(+147 files in other folders)
