SUBDIRS = common fedora gnome ubuntu

code_PYTHON = \
    applib.py \
    lib.py \
    loader.py \
    settinglib.py \
    tip_after_logging_in.py \
    u_app.py \
    u_info.py \
    ui.py \
    ulib.py \
    u_offline_install.py \
    u_setting.py \
    z_disabledpane.py \
    z_dumpaptcache.py \
    z_dumpaptcache2.py \
    z_dumprpmcache.py \
    z_locale.py \
    z_output_safely_deletable_pkgs.py \
    z_pangobuffer.py \
    z_releasenotesviewer.py \
    z_searchbox.py \
    z_splashwindow.py \
    z_terminal.py \
    z_terminal_single_thread.py \
    z_tipoftheday.py \
    z_undobuffer.py \
    z_windowpos.py
codedir = $(pkgdatadir)/src/

EXTRA_DIST = z_locale.py.in
