files_DATA = \
	mplayer_url_convert.py \
	mplayerconfig \
	war3.reg \
	wine_wqy_font.reg \
	$(NULL)

files_SCRIPTS = \
	ubuntu-native-64bit-flash-installer.sh \
	fedora-native-64bit-flash-installer.sh \
	disable_sudo.py \
	enable_sudo.py \
	mplayer_comic \
	texpdf \
	useicc \
	$(NULL)

filesdir = $(pkgdatadir)/data/files

EXTRA_DIST = $(files_DATA) $(files_SCRIPTS)
