code_PYTHON = \
    __init__.py \
    app_not_opensource.py \
    app0.py \
    app1.py \
    app2.py \
    app3.py \
    apps.py \
    menu.py \
    osinfo.py \
    pane_register.py \
    quick_setup.py \
    serverlib.py \
    setting.py \
    third_party_repos.py \
    tips.py \
    u_apt_recovery.py \
    u_fastest_mirror.py \
    z_multidragview.py
codedir = $(pkgdatadir)/src/ubuntu/
